--- a/index.html
+++ b/index.html
@@ -12,18 +12,38 @@
       overflow: hidden;
     }
 
+    /* 기존 별 배경 */
     .stars {
       position: fixed;
       width: 100%;
       height: 100%;
       background: transparent url("https://www.transparenttextures.com/patterns/stardust.png") repeat;
       animation: moveStars 100s linear infinite;
-      z-index: -1;
+      z-index: -2;
     }
 
     @keyframes moveStars {
       from {background-position: 0 0;}
       to {background-position: 10000px 5000px;}
+    }
+
+    /* 새로 추가: 은하/성운 배경 */
+    .nebula {
+      position: fixed;
+      width: 150%;
+      height: 150%;
+      top: -25%;
+      left: -25%;
+      background: url("https://i.ibb.co/4fD0z7T/nebula.png") no-repeat center center;
+      background-size: cover;
+      opacity: 0.3;
+      animation: driftNebula 300s linear infinite;
+      z-index: -1;
+    }
+
+    @keyframes driftNebula {
+      from {transform: translate(0,0);}
+      to {transform: translate(-200px, 150px);}
     }
 
     h1 {
@@ -60,6 +80,7 @@
 <body>
 
 <div class="stars"></div>
+<div class="nebula"></div>
 
 <h1>🚀 남강현 🌌</h1>
 
