--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>남강현의 우주</title>
   <style>
     body {
@@ -12,7 +13,7 @@
       overflow: hidden;
     }
 
-    /* 기존 별 배경 */
+    /* 별 배경 */
     .stars {
       position: fixed;
       width: 100%;
@@ -27,68 +28,10 @@
       to {background-position: 10000px 5000px;}
     }
 
-    /* 새로 추가: 은하/성운 배경 */
+    /* 성운 배경 */
     .nebula {
       position: fixed;
       width: 150%;
       height: 150%;
       top: -25%;
-      left: -25%;
-      background: url("https://i.ibb.co/4fD0z7T/nebula.png") no-repeat center center;
-      background-size: cover;
-      opacity: 0.3;
-      animation: driftNebula 300s linear infinite;
-      z-index: -1;
-    }
-
-    @keyframes driftNebula {
-      from {transform: translate(0,0);}
-      to {transform: translate(-200px, 150px);}
-    }
-
-    h1 {
-      margin-top: 120px;
-      font-size: 60px;
-      color: #00ffff;
-      text-shadow: 0 0 5px #00ffff, 0 0 10px #00ffff, 0 0 20px #00ffff, 0 0 40px #0088ff;
-    }
-
-    .menu {
-      margin-top: 80px;
-    }
-
-    .btn {
-      display: inline-block;
-      margin: 20px;
-      padding: 15px 40px;
-      font-size: 20px;
-      color: white;
-      border: 2px solid #00ffff;
-      border-radius: 30px;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-
-    .btn:hover {
-      background: #00ffff;
-      color: black;
-      box-shadow: 0 0 20px #00ffff;
-      transform: translateY(-5px);
-    }
-  </style>
-</head>
-<body>
-
-<div class="stars"></div>
-<div class="nebula"></div>
-
-<h1>🚀 남강현 🌌</h1>
-
-<div class="menu">
-  <a href="about.html" class="btn">👤 About Me</a>
-  <a href="gallery.html" class="btn">🖼 Gallery</a>
-  <a href="contact.html" class="btn">📩 Contact</a>
-</div>
-
-</body>
-</html>
+      le
