--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>About Me - 남강현</title>
+  <meta charset="UTF-8">
+  <title>About Me</title>
   <style>
     body {
       margin: 0;
@@ -9,10 +10,9 @@
       color: white;
       font-family: Arial, sans-serif;
       text-align: center;
-      overflow-x: hidden;
+      overflow: hidden;
     }
 
-    /* 별 배경 */
     .stars {
       position: fixed;
       width: 100%;
@@ -27,41 +27,38 @@
       to {background-position: 10000px 5000px;}
     }
 
-    /* 은하/성운 배경 */
     .nebula {
       position: fixed;
       width: 150%;
       height: 150%;
       top: -25%;
       left: -25%;
-      background: url("https://i.ibb.co/4fD0z7T/nebula.png") no-repeat center center;
-      background-size: cover;
-      opacity: 0.3;
-      animation: driftNebula 300s linear infinite;
+      background: radial-gradient(circle at 40% 40%, rgba(0,255,255,0.2), transparent 60%),
+                  radial-gradient(circle at 60% 60%, rgba(0,0,255,0.2), transparent 60%);
+      animation: drift 200s linear infinite;
       z-index: -1;
     }
 
-    @keyframes driftNebula {
+    @keyframes drift {
       from {transform: translate(0,0);}
-      to {transform: translate(-200px, 150px);}
+      to {transform: translate(-200px,150px);}
     }
 
     h1 {
-      margin-top: 100px;
+      margin-top: 120px;
       font-size: 50px;
       color: #00ffff;
-      text-shadow: 0 0 5px #00ffff, 0 0 10px #00ffff, 0 0 20px #00ffff, 0 0 40px #0088ff;
+      text-shadow: 0 0 10px #00ffff, 0 0 30px #0088ff;
     }
 
     p {
       max-width: 700px;
-      margin: 30px auto;
+      margin: 40px auto;
       font-size: 22px;
       line-height: 1.6;
-      color: #ffffff;
     }
 
-    a.btn {
+    .btn {
       display: inline-block;
       margin-top: 40px;
       padding: 12px 30px;
@@ -73,7 +70,7 @@
       transition: 0.3s;
     }
 
-    a.btn:hover {
+    .btn:hover {
       background: #00ffff;
       color: black;
       box-shadow: 0 0 20px #00ffff;
@@ -89,13 +86,12 @@
 <h1>👤 About Me</h1>
 
 <p>
-  안녕하세요! 저는 남강현입니다.  
-  웹 개발과 디자인에 관심이 많고, 창의적인 프로젝트를 만들며 배우는 것을 즐깁니다.  
-  앞으로 다양한 작품과 경험을 이 사이트를 통해 공유할 계획이에요.  
-  제 우주에 오신 걸 환영합니다! 🌌
+안녕하세요! 저는 남강현입니다.<br>
+우주처럼 넓은 가능성을 꿈꾸며 웹사이트를 만들고 있습니다.<br>
+이곳은 저만의 작은 우주입니다 🌌
 </p>
 
-<a href="index.html" class="btn">🏠 Back to Home</a>
+<a href="index.html" class="btn">🏠 Home</a>
 
 </body>
 </html>
