--- a/contact.html
+++ b/contact.html
@@ -13,13 +13,12 @@
       overflow: hidden;
     }
 
-    /* 별 배경 */
     .stars {
       position: fixed;
       width: 100%;
       height: 100%;
       background: transparent url("https://www.transparenttextures.com/patterns/stardust.png") repeat;
-      animation: moveStars 100s linear infinite;
+      animation: moveStars 120s linear infinite;
       z-index: -2;
     }
 
@@ -28,16 +27,15 @@
       to {background-position: 10000px 5000px;}
     }
 
-    /* 성운 효과 */
     .nebula {
       position: fixed;
       width: 150%;
       height: 150%;
       top: -25%;
       left: -25%;
-      background: radial-gradient(circle at 40% 40%, rgba(0,255,255,0.2), transparent 60%),
-                  radial-gradient(circle at 60% 60%, rgba(0,0,255,0.2), transparent 60%);
-      animation: drift 200s linear infinite;
+      background: radial-gradient(circle at 40% 40%, rgba(0,255,255,0.25), transparent 60%),
+                  radial-gradient(circle at 60% 60%, rgba(0,0,255,0.25), transparent 60%);
+      animation: drift 250s linear infinite;
       z-index: -1;
     }
 
@@ -48,20 +46,19 @@
 
     h1 {
       margin-top: 120px;
-      font-size: 50px;
+      font-size: 55px;
       color: #00ffff;
-      text-shadow: 0 0 10px #00ffff, 0 0 30px #0088ff;
+      text-shadow: 0 0 20px #00ffff;
     }
 
     .phone {
       margin-top: 40px;
       font-size: 28px;
-      letter-spacing: 2px;
     }
 
     .call-btn {
       display: inline-block;
-      margin-top: 40px;
+      margin-top: 30px;
       padding: 15px 35px;
       font-size: 20px;
       color: white;
@@ -74,23 +71,21 @@
     .call-btn:hover {
       background: #00ffff;
       color: black;
-      box-shadow: 0 0 20px #00ffff;
-      transform: translateY(-5px);
+      box-shadow: 0 0 25px #00ffff;
     }
 
-    .home-btn {
+    .btn {
       display: inline-block;
       margin-top: 60px;
-      padding: 10px 25px;
-      font-size: 16px;
+      padding: 12px 30px;
+      font-size: 18px;
       color: white;
-      border: 1px solid #00ffff;
-      border-radius: 20px;
+      border: 2px solid #00ffff;
+      border-radius: 30px;
       text-decoration: none;
-      transition: 0.3s;
     }
 
-    .home-btn:hover {
+    .btn:hover {
       background: #00ffff;
       color: black;
     }
@@ -104,17 +99,7 @@
 <h1>📩 Contact</h1>
 
 <div class="phone">
-  📱 010-5017-6664
+📱 010-5017-6664
 </div>
 
-<!-- 전화 연결 버튼 -->
-<a href="tel:01050176664" class="call-btn">
-  📞 전화 걸기
-</a>
-
-<br>
-
-<a href="index.html" class="home-btn">🏠 Home</a>
-
-</body>
-</html>
+<a hr
