--- a/index.html
+++ b/index.html
@@ -3,35 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <title>남강현의 우주</title>
-
 <style>
 body {
   margin: 0;
-  background: black;
+  background-color: black;
   color: white;
   font-family: Arial, sans-serif;
   text-align: center;
-  overflow: hidden;
-}
-
-/* 별 배경 */
-.stars {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: transparent url("https://www.transparenttextures.com/patterns/stardust.png") repeat;
-  animation: moveStars 120s linear infinite;
-  z-index: -2;
-}
-
-@keyframes moveStars {
-  from { background-position: 0 0; }
-  to { background-position: 10000px 5000px; }
 }
 
 .container {
-  position: relative;
-  top: 30vh;
+  margin-top: 200px;
 }
 
 a {
@@ -41,19 +23,11 @@ a {
   background: white;
   color: black;
   text-decoration: none;
-  border-radius: 12px;
-  transition: 0.3s;
-}
-
-a:hover {
-  background: gray;
+  border-radius: 10px;
 }
 </style>
 </head>
 
 <body>
 
-<div class="stars"></div>
-
-<div class="container">
-  <h1>🌌 남강현의 우주</h1>
+<div class="containe
