--- a/index.html
+++ b/index.html
@@ -1,26 +1,9 @@
-<style>
-body {
-  margin: 0;
-  background: black;
-  color: white;
-  font-family: Arial, sans-serif;
-  text-align: center;
-  overflow: hidden;
-}
-
-/* 별 효과 */
-body::before {
-  content: "";
-  position: fixed;
-  width: 200%;
-  height: 200%;
-  background-image: radial-gradient(white 1px, transparent 1px);
-  background-size: 50px 50
 <!DOCTYPE html>
 <html>
 <head>
 <meta charset="UTF-8">
 <title>남강현의 우주</title>
+
 <style>
 body {
   margin: 0;
@@ -28,6 +11,23 @@ body {
   color: white;
   font-family: Arial, sans-serif;
   text-align: center;
+  overflow: hidden;
+}
+
+/* 별 배경 */
+.stars {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-image: radial-gradient(white 1px, transparent 1px);
+  background-size: 40px 40px;
+  animation: move 60s linear infinite;
+  z-index: -1;
+}
+
+@keyframes move {
+  from { background-position: 0 0; }
+  to { background-position: 1000px 1000px; }
 }
 
 .container {
@@ -48,4 +48,15 @@ a {
 
 <body>
 
-<div class="containe
+<div class="stars"></div>
+
+<div class="container">
+  <h1>남강현의 우주 🚀</h1>
+  <p>우주 감성 웹사이트</p>
+
+  <a href="about.html">소개</a>
+  <a href="contact.html">연락처</a>
+</div>
+
+</body>
+</html>
