--- a/about.html
+++ b/about.html
@@ -2,19 +2,41 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>About Me</title>
-
+<title>소개</title>
 <style>
 body {
-    margin: 0;
-    padding: 0;
-    background: black;
-    color: white;
-    text-align: center;
-    font-family: Arial, sans-serif;
-    overflow: hidden;
+  margin: 0;
+  background: black;
+  color: white;
+  font-family: Arial, sans-serif;
+  text-align: center;
 }
 
-/* 별 배경 */
-.stars {
-    widt
+.container {
+  margin-top: 200px;
+}
+
+a {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 12px 25px;
+  background: white;
+  color: black;
+  text-decoration: none;
+  border-radius: 10px;
+}
+</style>
+</head>
+
+<body>
+
+<div class="container">
+  <h1>About Me 🚀</h1>
+  <p>안녕하세요 남강현입니다.</p>
+  <p>우주 감성 웹사이트 제작 중 🌌</p>
+
+  <a href="index.html">메인으로 돌아가기</a>
+</div>
+
+</body>
+</html>
