--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>소개</title>
+
 <style>
 body {
   margin: 0;
@@ -31,9 +32,8 @@ a {
 <body>
 
 <div class="container">
-  <h1>About Me 🚀</h1>
+  <h1>About Me 🌌</h1>
   <p>안녕하세요 남강현입니다.</p>
-  <p>우주 감성 웹사이트 제작 중 🌌</p>
 
   <a href="index.html">메인으로 돌아가기</a>
 </div>
