--- a/about.html
+++ b/about.html
@@ -16,16 +16,6 @@ body {
 .container {
   margin-top: 200px;
 }
-
-a {
-  display: inline-block;
-  margin-top: 20px;
-  padding: 12px 25px;
-  background: white;
-  color: black;
-  text-decoration: none;
-  border-radius: 10px;
-}
 </style>
 </head>
 
@@ -34,8 +24,7 @@ a {
 <div class="container">
   <h1>About Me 🌌</h1>
   <p>안녕하세요 남강현입니다.</p>
-
-  <a href="index.html">메인으로 돌아가기</a>
+  <p>우주 감성 웹사이트 제작 중 🚀</p>
 </div>
 
 </body>
