--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>남강현의 우주</title>
+<title>소개</title>
 
 <style>
 body {
@@ -16,26 +16,15 @@ body {
 .container {
   margin-top: 200px;
 }
-
-a {
-  display: inline-block;
-  margin: 10px;
-  padding: 12px 25px;
-  background: white;
-  color: black;
-  text-decoration: none;
-  border-radius: 10px;
-}
 </style>
 </head>
 
 <body>
 
 <div class="container">
-  <h1>남강현의 우주 🚀</h1>
-  <p>메인 화면입니다</p>
-
-  <a href="about.html">소개</a>
+  <h1>About Me 🌌</h1>
+  <p>안녕하세요 남강현입니다.</p>
+  <p>우주 감성 웹사이트 제작 중 🚀</p>
 </div>
 
 </body>
