--- a/index.html
+++ b/index.html
@@ -2,30 +2,23 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>소개</title>
+<title>남강현의 우주</title>
 
 <style>
 body {
   margin: 0;
-  background: black;
+  overflow: hidden;
   color: white;
   font-family: Arial, sans-serif;
   text-align: center;
+  background: radial-gradient(circle at center, #0a0f2c 0%, #000000 70%);
 }
 
-.container {
-  margin-top: 200px;
-}
-</style>
-</head>
-
-<body>
-
-<div class="container">
-  <h1>About Me 🌌</h1>
-  <p>안녕하세요 남강현입니다.</p>
-  <p>우주 감성 웹사이트 제작 중 🚀</p>
-</div>
-
-</body>
-</html>
+/* 움직이는 성운 */
+.space {
+  position: fixed;
+  width: 200%;
+  height: 200%;
+  background: radial-gradient(circle at 30% 40%, rgba(0, 100, 255, 0.4), transparent 40%),
+              radial-gradient(circle at 70% 60%, rgba(150, 0, 255, 0.4), transparent 40%),
+              radial
