--- a/contact.html
+++ b/contact.html
@@ -1,105 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Contact</title>
-  <style>
-    body {
-      margin: 0;
-      background: black;
-      color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      overflow: hidden;
-    }
+<meta charset="UTF-8">
+<title>연락처</title>
 
-    .stars {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      background: transparent url("https://www.transparenttextures.com/patterns/stardust.png") repeat;
-      animation: moveStars 120s linear infinite;
-      z-index: -2;
-    }
+<style>
+body {
+  margin: 0;
+  overflow: hidden;
+  color: white;
+  font-family: Arial, sans-serif;
+  text-align: center;
+  background: radial-gradient(circle at center, #0a0f2c 0%, #000000 70%);
+}
 
-    @keyframes moveStars {
-      from {background-position: 0 0;}
-      to {background-position: 10000px 5000px;}
-    }
+/* 움직이는 성운 배경 */
+.space {
+  position: fixed;
+  width: 200%;
+  height: 200%;
+  background: radial-gradient(circle at 30% 40%, rgba(0, 100, 255, 0.4), transparent 40%),
+              radial-gradient(circle at 70% 60%, rgba(150, 0, 255, 0.4), transparent 40%),
+              radial-gradient(circle at 50% 20%, rgba(255, 0, 150, 0.3), transparent 40%);
+  animation: moveSpace 30s linear infinite alternate;
+  z-index: -1;
+}
 
-    .nebula {
-      position: fixed;
-      width: 150%;
-      height: 150%;
-      top: -25%;
-      left: -25%;
-      background: radial-gradient(circle at 40% 40%, rgba(0,255,255,0.25), transparent 60%),
-                  radial-gradient(circle at 60% 60%, rgba(0,0,255,0.25), transparent 60%);
-      animation: drift 250s linear infinite;
-      z-index: -1;
-    }
+@keyframes moveSpace {
+  from { transform: translate(0, 0); }
+  to { transform: translate(-200px, -150px); }
+}
 
-    @keyframes drift {
-      from {transform: translate(0,0);}
-      to {transform: translate(-200px,150px);}
-    }
+.container {
+  margin-top: 200px;
+}
 
-    h1 {
-      margin-top: 120px;
-      font-size: 55px;
-      color: #00ffff;
-      text-shadow: 0 0 20px #00ffff;
-    }
+a {
+  display: inline-block;
+  margin-top: 20px;
+  padding: 12px 25px;
+  background: rgba(255,255,255,0.9);
+  color: black;
+  text-decoration: none;
+  border-radius: 10px;
+  transition: 0.3s;
+}
 
-    .phone {
-      margin-top: 40px;
-      font-size: 28px;
-    }
-
-    .call-btn {
-      display: inline-block;
-      margin-top: 30px;
-      padding: 15px 35px;
-      font-size: 20px;
-      color: white;
-      border: 2px solid #00ffff;
-      border-radius: 30px;
-      text-decoration: none;
-      transition: 0.3s;
-    }
-
-    .call-btn:hover {
-      background: #00ffff;
-      color: black;
-      box-shadow: 0 0 25px #00ffff;
-    }
-
-    .btn {
-      display: inline-block;
-      margin-top: 60px;
-      padding: 12px 30px;
-      font-size: 18px;
-      color: white;
-      border: 2px solid #00ffff;
-      border-radius: 30px;
-      text-decoration: none;
-    }
-
-    .btn:hover {
-      background: #00ffff;
-      color: black;
-    }
-  </style>
+a:hover {
+  background: white;
+}
+</style>
 </head>
+
 <body>
 
-<div class="stars"></div>
-<div class="nebula"></div>
+<div class="space"></div>
 
-<h1>📩 Contact</h1>
+<div class="container">
+  <h1>📞 Contact</h1>
+  <p>전화번호: 010-5017-6664</p>
+  <p>언제든 연락 주세요 🚀</p>
 
-<div class="phone">
-📱 010-5017-6664
+  <a href="index.html">메인으로</a>
 </div>
 
-<a hr
+</body>
+</html>
