--- a/index.html
+++ b/index.html
@@ -3,22 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <title>남강현의 우주</title>
+</head>
 
-<style>
-body {
-  margin: 0;
-  overflow: hidden;
-  color: white;
-  font-family: Arial, sans-serif;
-  text-align: center;
-  background: radial-gradient(circle at center, #0a0f2c 0%, #000000 70%);
-}
+<body style="margin:0; background:black; color:white; text-align:center; font-family:Arial;">
 
-/* 움직이는 성운 */
-.space {
-  position: fixed;
-  width: 200%;
-  height: 200%;
-  background: radial-gradient(circle at 30% 40%, rgba(0, 100, 255, 0.4), transparent 40%),
-              radial-gradient(circle at 70% 60%, rgba(150, 0, 255, 0.4), transparent 40%),
-              radial
+<div style="margin-top:200px;">
+  <h1>🌌 남강현의 우주</h1>
+  <p>정상 작동 테스트 화면 🚀</p>
+
+  <a href="about.html" style="padding:10px 20px; background:white; color:black; text-decoration:none; border-radius:8px;">소개</a>
+  <a href="contact.html" style="padding:10px 20px; background:white; color:black; text-decoration:none; border-radius:8px;">연락처</a>
+</div>
+
+</body>
+</html>
