--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <div style="margin-top:200px;">
   <h1>🌌 남강현의 우주</h1>
-  <p>정상 작동 테스트 화면 🚀</p>
+  <p>메인 화면입니다 🚀</p>
 
   <a href="about.html" style="padding:10px 20px; background:white; color:black; text-decoration:none; border-radius:8px;">소개</a>
   <a href="contact.html" style="padding:10px 20px; background:white; color:black; text-decoration:none; border-radius:8px;">연락처</a>
