--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <a href="about.html" style="padding:10px 20px; background:white; color:black; text-decoration:none; border-radius:8px;">소개</a>
   <a href="contact.html" style="padding:10px 20px; background:white; color:black; text-decoration:none; border-radius:8px;">연락처</a>
+  <a href="#" style="padding:10px 20px; background:white; color:black; text-decoration:none; border-radius:8px;">게임</a>
 </div>
 
 </body>
