--- a/index.html
+++ b/index.html
@@ -19,60 +19,4 @@ body {
 
 button {
   padding: 15px 30px;
-  font-size: 18px;
-  margin: 10px;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  background: white;
-  color: black;
-}
-
-.games-box {
-  margin: 30px auto;
-  padding: 20px;
-  width: 320px;
-  background: rgba(255,255,255,0.1);
-  border-radius: 15px;
-  display: none;
-}
-</style>
-</head>
-
-<body>
-
-<div class="container">
-  <h1>🌌 남강현의 우주 웹사이트</h1>
-  <p>환영합니다 🚀</p>
-
-  <button onclick="goAbout()">소개</button>
-  <button onclick="toggleGames()">게임</button>
-
-  <div id="gamesBox" class="games-box">
-    <h2>🎮 내 게임 닉네임</h2>
-    <p>발로란트: Villain #Dev1l</p>
-    <p>롤: 발로 동일</p>
-    <p>피파</p>
-    <p>브롤: Villain</p>
-    <p>좀비고: 승리한빌런</p>
-  </div>
-</div>
-
-<script>
-function goAbout() {
-  window.location.href = "about.html";
-}
-
-function toggleGames() {
-  var box = document.getElementById("gamesBox");
-
-  if (box.style.display === "block") {
-    box.style.display = "none";
-  } else {
-    box.style.display = "block";
-  }
-}
-</script>
-
-</body>
-</html>
+  font-size: 18
