--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
 <style>
 body {
   margin: 0;
-  background: radial-gradient(circle at top, #0a0f2c, #000000);
+  background: radial-gradient(circle at top, #050816, #000000);
   color: white;
   font-family: Arial, sans-serif;
   text-align: center;
 }
 
-.container {
+/* 네온 제목 */
+h1 {
   margin-top: 150px;
+  font-size: 40px;
+  color: #00f7ff;
+  text-shadow:
+    0 0 5px #00f7ff,
+    0 0 10px #00f7ff,
+    0 0 20px #00f7ff,
+    0 0 40px #008cff;
 }
 
-button {
-  padding: 15px 30px;
-  font-size: 18
+/* 버*
