--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@ h1 {
     0 0 20px #00f7ff,
     0 0 40px #008cff;
 }
+</style>
+</head>
 
-/* 버*
+<body>
+  <h1>🚀 남강현의 우주 사이트 🚀</h1>
+  <p>GitHub Pages 정상 작동 중!</p>
+</body>
+</html>
