--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 <style>
 body {
   margin: 0;
-  overflow: hidden;
-  background: black;
+  background: radial-gradient(circle at top, #050816, #000000);
   color: white;
   font-family: Arial, sans-serif;
   text-align: center;
+  overflow-x: hidden;
 }
 
 /* 별 */
 .star {
-  position: absolute;
+  position: fixed;
   width: 2px;
   height: 2px;
   background: white;
@@ -28,7 +28,39 @@ body {
   to { opacity: 1; }
 }
 
-/* 네온 제목 */
+/* 유성 */
+.shooting-star {
+  position: fixed;
+  width: 3px;
+  height: 3px;
+  background: white;
+  box-shadow: 0 0 10px white;
+  animation: shoot 1s linear forwards;
+}
+
+@keyframes shoot {
+  from { transform: translate(0,0); opacity: 1; }
+  to { transform: translate(300px,300px); opacity: 0; }
+}
+
+/* 행성 */
+.planet {
+  position: fixed;
+  width: 80px;
+  height: 80px;
+  background: radial-gradient(circle, #00f7ff, #003366);
+  border-radius: 50%;
+  top: 20%;
+  left: 10%;
+  animation: float 6s ease-in-out infinite;
+}
+
+@keyframes float {
+  0%,100% { transform: translateY(0px); }
+  50% { transform: translateY(20px); }
+}
+
+/* 제목 */
 h1 {
   margin-top: 200px;
   font-size: 45px;
@@ -56,18 +88,33 @@ button:hover {
   background: #00f7ff;
   color: black;
 }
+
+/* 마우스 빛 */
+.cursor-light {
+  position: fixed;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  pointer-events: none;
+  background: radial-gradient(circle, rgba(0,247,255,0.8), transparent);
+}
 </style>
 </head>
 
 <body>
 
-<h1 id="title"></h1>
+<div class="planet"></div>
+<div class="cursor-light" id="light"></div>
 
-<button onclick="startGame()">🎮 게임 시작</button>
+<h1 id="title"></h1>
+<button onclick="startGame()">🎮 클릭 게임 시작</button>
+
+<p style="margin-top:600px;">🚀 스크롤 테스트 구역</p>
 
 <script>
+
 /* 타이핑 효과 */
-const text = "🚀 남강현의 우주 사이트 🚀";
+const text = "🚀 남강현의 전설 우주 사이트 🚀";
 let i = 0;
 function typeEffect() {
   if (i < text.length) {
@@ -79,7 +126,7 @@ function typeEffect() {
 typeEffect();
 
 /* 별 생성 */
-for (let i = 0; i < 200; i++) {
+for (let i = 0; i < 150; i++) {
   let star = document.createElement("div");
   star.className = "star";
   star.style.top = Math.random() * window.innerHeight + "px";
@@ -88,10 +135,30 @@ for (let i = 0; i < 200; i++) {
   document.body.appendChild(star);
 }
 
-/* 게임 */
+/* 유성 생성 */
+setInterval(() => {
+  let star = document.createElement("div");
+  star.className = "shooting-star";
+  star.style.top = Math.random() * window.innerHeight + "px";
+  star.style.left = Math.random() * window.innerWidth + "px";
+  document.body.appendChild(star);
+  setTimeout(() => star.remove(), 1000);
+}, 3000);
+
+/* 마우스 빛 */
+document.addEventListener("mousemove", (e) => {
+  const light = document.getElementById("light");
+  light.style.left = e.pageX - 10 + "px";
+  light.style.top = e.pageY - 10 + "px";
+});
+
+/* 클릭 게임 */
+let score = 0;
 function startGame() {
-  alert("🚀 우주 모험 시작!");
+  score++;
+  alert("점수: " + score);
 }
+
 </script>
 
 </body>
