--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <a href="game.html">🎮 게임</a>
   <a href="portfolio.html">💼 포트폴리오</a>
   <a href="guestbook.html">📝 방명록</a>
+  <!-- 새로 추가된 버튼 -->
+  <a href="about.html">🙋‍♂️ 어바웃 미</a>
+  <a href="content.html">📚 컨텐츠</a>
 </div>
 
 <script src="script.js"></script>
