--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <div class="planet"></div>
 <div class="cursor-light" id="light"></div>
 
-<h1 id="title"></h1>
+<!-- 수정된 제목 -->
+<h1 id="title">환영합니다</h1>
 
 <div class="menu">
   <a href="game.html">🎮 게임</a>
   <a href="portfolio.html">💼 포트폴리오</a>
   <a href="guestbook.html">📝 방명록</a>
-  <!-- 새로 추가된 버튼 -->
   <a href="about.html">🙋‍♂️ 어바웃 미</a>
   <a href="content.html">📚 컨텐츠</a>
 </div>
