--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css">
+<title>남강현 유니버스</title>
 </head>
 
 <body>
@@ -11,7 +12,7 @@
 <div class="cursor-light" id="light"></div>
 
 <!-- 수정된 제목 -->
-<h1 id="title">환영합니다</h1>
+<h1 id="title">🚀 환영합니다 🚀</h1>
 
 <div class="menu">
   <a href="game.html">🎮 게임</a>
