--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div class="planet"></div>
 <div class="cursor-light" id="light"></div>
 
-<!-- 수정된 제목 -->
-<h1 id="title">🚀 환영합니다 🚀</h1>
+<!-- 제목: 남강현 유니버스 삭제하고 환영합니다만 -->
+<h1 id="title">환영합니다 🚀 🚀</h1>
 
 <div class="menu">
   <a href="game.html">🎮 게임</a>
