--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="style.css">
-<title>남강현 유니버스</title>
+<title>환영합니다</title>
 </head>
 
 <body>
@@ -11,8 +11,8 @@
 <div class="planet"></div>
 <div class="cursor-light" id="light"></div>
 
-<!-- 제목: 남강현 유니버스 삭제하고 환영합니다만 -->
-<h1 id="title">환영합니다 🚀 🚀</h1>
+<!-- 제목 완전 교체 -->
+<h1 id="title">🚀 환영합니다 🚀</h1>
 
 <div class="menu">
   <a href="game.html">🎮 게임</a>
