--- a/game.html
+++ b/game.html
@@ -36,6 +36,14 @@ button:hover{
   height:80vh;
   overflow:hidden;
   margin-top:20px;
+  border:1px solid cyan;
+}
+
+/* 점수 표시 */
+#scoreDisplay {
+  font-size: 20px;
+  margin-top: 10px;
+  color: yellow;
 }
 
 .player{
@@ -82,6 +90,9 @@ button:hover{
   <a href="index.html"><button>🏠 홈으로</button></a>
 </div>
 
+<!-- 점수 표시 -->
+<div id="scoreDisplay">점수: 0</div>
+
 <div id="gameArea"></div>
 
 <script>
@@ -90,6 +101,7 @@ let score = 0;
 let enemyInterval;
 let moveInterval;
 let bullets = [];
+let scoreDisplay = document.getElementById("scoreDisplay");
 
 /* 게임 초기화 */
 function clearGame(){
@@ -97,6 +109,7 @@ function clearGame(){
   score=0;
   document.title="우주 게임 센터";
   bullets = [];
+  scoreDisplay.innerText = "점수: 0";
   if(enemyInterval) clearInterval(enemyInterval);
   if(moveInterval) clearInterval(moveInterval);
 }
@@ -109,15 +122,14 @@ function startShooting(){
   player.className="player";
   gameArea.appendChild(player);
 
-  // 플레이어 마우스 이동
   document.onmousemove = e=>{
-    let x = e.pageX - 20; // 중앙 기준
+    let rect = gameArea.getBoundingClientRect();
+    let x = e.clientX - rect.left - 20;
     if(x < 0) x=0;
-    if(x>window.innerWidth-40) x=window.innerWidth-40;
+    if(x>gameArea.offsetWidth-40) x=gameArea.offsetWidth-40;
     player.style.left = x + "px";
   }
 
-  // 총알 발사
   document.onclick = ()=>{
     let bullet = document.createElement("div");
     bullet.className="bullet";
@@ -127,28 +139,23 @@ function startShooting(){
     bullets.push(bullet);
   }
 
-  // 적 생성
   enemyInterval = setInterval(()=>{
     let enemy = document.createElement("div");
     enemy.className="enemy";
-    enemy.style.left = Math.random()*(window.innerWidth-30) + "px";
+    enemy.style.left = Math.random()*(gameArea.offsetWidth-30) + "px";
     enemy.style.top = "0px";
     gameArea.appendChild(enemy);
   }, 1000);
 
-  // 게임 루프
   moveInterval = setInterval(()=>{
-    // 적 이동
     let enemies = document.querySelectorAll(".enemy");
     enemies.forEach(enemy=>{
       enemy.style.top = (enemy.offsetTop + 5) + "px";
 
-      // 화면 아래로 나가면 삭제
-      if(enemy.offsetTop > window.innerHeight){
+      if(enemy.offsetTop > gameArea.offsetHeight){
         enemy.remove();
       }
 
-      // 총알 충돌 체크
       bullets.forEach((bullet, i)=>{
         if(
           bullet.offsetTop < enemy.offsetTop + 30 &&
@@ -160,12 +167,12 @@ function startShooting(){
           bullet.remove();
           bullets.splice(i,1);
           score++;
+          scoreDisplay.innerText = "점수: "+score;
           document.title = "점수: "+score;
         }
       });
     });
 
-    // 총알 이동
     bullets.forEach((bullet, i)=>{
       bullet.style.top = (bullet.offsetTop - 10) + "px";
       if(bullet.offsetTop < 0){
@@ -185,16 +192,17 @@ function startDodge(){
   gameArea.appendChild(player);
 
   document.onmousemove = e=>{
-    let x = e.pageX - 20;
+    let rect = gameArea.getBoundingClientRect();
+    let x = e.clientX - rect.left - 20;
     if(x < 0) x=0;
-    if(x>window.innerWidth-40) x=window.innerWidth-40;
+    if(x>gameArea.offsetWidth-40) x=gameArea.offsetWidth-40;
     player.style.left = x + "px";
   }
 
   enemyInterval = setInterval(()=>{
     let enemy = document.createElement("div");
     enemy.className="enemy";
-    enemy.style.left=Math.random()*(window.innerWidth-30)+"px";
+    enemy.style.left=Math.random()*(gameArea.offsetWidth-30)+"px";
     gameArea.appendChild(enemy);
 
     let fall=setInterval(()=>{
@@ -209,7 +217,7 @@ function startDodge(){
         location.reload();
       }
 
-      if(enemy.offsetTop>window.innerHeight){
+      if(enemy.offsetTop>gameArea.offsetHeight){
         enemy.remove();
         clearInterval(fall);
       }
@@ -221,25 +229,10 @@ function startDodge(){
 function startClick(){
   clearGame();
   let scoreClick = 0;
+  scoreDisplay.innerText = "점수: 0";
 
   enemyInterval = setInterval(()=>{
     let target=document.createElement("div");
     target.className="target";
-    target.style.left=Math.random()*(window.innerWidth-30)+"px";
-    target.style.top=Math.random()*(window.innerHeight-30)+"px";
-
-    target.onclick=()=>{
-      scoreClick++;
-      target.remove();
-      document.title="점수: "+scoreClick;
-    }
-
-    gameArea.appendChild(target);
-
-    setTimeout(()=>target.remove(),1500);
-  },1000);
-}
-</script>
-
-</body>
-</html>
+    target.style.left = Math.random() * (gameArea.offsetWidth - 30) + "px";
+    target.style.top = Math.r
