--- a/game.html
+++ b/game.html
@@ -58,4 +58,200 @@ button:hover{
   width:30px;
   height:30px;
   background:red;
-  position:abso
+  position:absolute;
+}
+
+.bullet{
+  width:5px;
+  height:15px;
+  background:white;
+  position:absolute;
+}
+
+.target{
+  width:30px;
+  height:30px;
+  background:yellow;
+  position:absolute;
+  cursor:pointer;
+}
+</style>
+</head>
+
+<body>
+
+<h1>🎮 우주 게임 센터 🎮</h1>
+
+<div id="menu">
+  <button onclick="startShooting()">🛸 슈팅 게임</button>
+  <button onclick="startDodge()">🧱 피하기 게임</button>
+  <button onclick="startClick()">🎯 클릭 게임</button>
+  <br>
+  <a href="index.html"><button>🏠 홈으로</button></a>
+</div>
+
+<div id="scoreDisplay">점수: 0</div>
+<div id="gameArea"></div>
+
+<script>
+let gameArea = document.getElementById("gameArea");
+let score = 0;
+let enemyInterval;
+let moveInterval;
+let bullets = [];
+let scoreDisplay = document.getElementById("scoreDisplay");
+
+/* 게임 초기화 */
+function clearGame(){
+  gameArea.innerHTML="";
+  score=0;
+  document.title="우주 게임 센터";
+  bullets = [];
+  scoreDisplay.innerText = "점수: 0";
+  if(enemyInterval) clearInterval(enemyInterval);
+  if(moveInterval) clearInterval(moveInterval);
+  document.onmousemove = null;
+  document.onclick = null;
+}
+
+/* ================== 슈팅 게임 ================== */
+function startShooting(){
+  clearGame();
+  
+  let player = document.createElement("div");
+  player.className="player";
+  gameArea.appendChild(player);
+
+  document.onmousemove = e=>{
+    let rect = gameArea.getBoundingClientRect();
+    let x = e.clientX - rect.left - 20;
+    if(x < 0) x=0;
+    if(x > gameArea.offsetWidth - 40) x=gameArea.offsetWidth - 40;
+    player.style.left = x + "px";
+  }
+
+  document.onclick = ()=>{
+    let bullet = document.createElement("div");
+    bullet.className="bullet";
+    bullet.style.left = (player.offsetLeft + 18) + "px";
+    bullet.style.top = (player.offsetTop - 15) + "px";
+    gameArea.appendChild(bullet);
+    bullets.push(bullet);
+  }
+
+  enemyInterval = setInterval(()=>{
+    let enemy = document.createElement("div");
+    enemy.className="enemy";
+    enemy.style.left = Math.random()*(gameArea.offsetWidth-30) + "px";
+    enemy.style.top = "0px";
+    gameArea.appendChild(enemy);
+  }, 1000);
+
+  moveInterval = setInterval(()=>{
+    let enemies = document.querySelectorAll(".enemy");
+    enemies.forEach(enemy=>{
+      enemy.style.top = (enemy.offsetTop + 5) + "px";
+
+      if(enemy.offsetTop > gameArea.offsetHeight){
+        enemy.remove();
+      }
+
+      bullets.forEach((bullet, i)=>{
+        if(
+          bullet.offsetTop < enemy.offsetTop + 30 &&
+          bullet.offsetTop + 15 > enemy.offsetTop &&
+          bullet.offsetLeft < enemy.offsetLeft + 30 &&
+          bullet.offsetLeft + 5 > enemy.offsetLeft
+        ){
+          enemy.remove();
+          bullet.remove();
+          bullets.splice(i,1);
+          score++;
+          scoreDisplay.innerText = "점수: "+score;
+          document.title = "점수: "+score;
+        }
+      });
+    });
+
+    bullets.forEach((bullet, i)=>{
+      bullet.style.top = (bullet.offsetTop - 10) + "px";
+      if(bullet.offsetTop < 0){
+        bullet.remove();
+        bullets.splice(i,1);
+      }
+    });
+
+  }, 30);
+}
+
+/* ================== 피하기 게임 ================== */
+function startDodge(){
+  clearGame();
+  
+  let player = document.createElement("div");
+  player.className="player";
+  gameArea.appendChild(player);
+
+  document.onmousemove = e=>{
+    let rect = gameArea.getBoundingClientRect();
+    let x = e.clientX - rect.left - 20;
+    if(x < 0) x=0;
+    if(x > gameArea.offsetWidth - 40) x=gameArea.offsetWidth - 40;
+    player.style.left = x + "px";
+  }
+
+  enemyInterval = setInterval(()=>{
+    let enemy = document.createElement("div");
+    enemy.className="enemy";
+    enemy.style.left=Math.random()*(gameArea.offsetWidth-30)+"px";
+    gameArea.appendChild(enemy);
+
+    let fall=setInterval(()=>{
+      enemy.style.top=(enemy.offsetTop+7)+"px";
+
+      if(
+        enemy.offsetTop+30 > player.offsetTop &&
+        enemy.offsetLeft < player.offsetLeft+40 &&
+        enemy.offsetLeft+30 > player.offsetLeft
+      ){
+        alert("💥 게임오버!");
+        location.reload();
+      }
+
+      if(enemy.offsetTop>gameArea.offsetHeight){
+        enemy.remove();
+        clearInterval(fall);
+      }
+    },30);
+  },800);
+}
+
+/* ================== 클릭 게임 ================== */
+function startClick(){
+  clearGame();
+  let scoreClick = 0;
+  scoreDisplay.innerText = "점수: 0";
+
+  enemyInterval = setInterval(()=>{
+    let target = document.createElement("div");
+    target.className="target";
+    target.style.left = Math.random() * (gameArea.offsetWidth - 30) + "px";
+    target.style.top = Math.random() * (gameArea.offsetHeight - 30) + "px";
+
+    // 각 목표물마다 클릭 이벤트만 등록
+    target.onclick = () => {
+      scoreClick++;
+      scoreDisplay.innerText = "점수: " + scoreClick;
+      target.remove();
+    }
+
+    gameArea.appendChild(target);
+
+    // 1.5초 후 자동 제거
+    setTimeout(()=>target.remove(),1500);
+  },1000);
+}
+</script>
+
+</body>
+</html>
