--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <a href="portfolio.html">💼 포트폴리오</a>
   <a href="guestbook.html">📝 방명록</a>
   <a href="about.html">🙋‍♂️ 어바웃 미</a>
-  <a href="content.html">📚 컨텐츠</a>
+  <a href="contact.html">📚 Contact</a>
 </div>
 
 <script src="script.js"></script>
