--- a/game.html
+++ b/game.html
@@ -84,7 +84,8 @@ button:hover{
   <button onclick="startShooting()">🛸 슈팅 게임</button>
   <button onclick="startDodge()">🧱 피하기 게임</button>
   <button onclick="startClick()">🎯 클릭 게임</button>
-  <br>
+  <button onclick="startFastTap()">⚡ 빠르게 누르기</button>
+  <button onclick="startSpeedDodge()">💨 속도 피하기</button>
   <a href="index.html"><button>🏠 홈으로</button></a>
 </div>
 
@@ -115,12 +116,9 @@ function clearGame(){
 /* ================== 슈팅 게임 ================== */
 function startShooting(){
   clearGame();
-  
   let player=document.createElement("div");
   player.className="player";
   gameArea.appendChild(player);
-
-  // 중앙 하단 초기 위치
   player.style.left=(gameArea.offsetWidth/2 - 20)+"px";
   player.style.top=(gameArea.offsetHeight - 50)+"px";
 
@@ -154,7 +152,6 @@ function startShooting(){
     enemies.forEach(enemy=>{
       enemy.style.top=(enemy.offsetTop+5)+"px";
       if(enemy.offsetTop>gameArea.offsetHeight) enemy.remove();
-
       bullets.forEach((bullet,i)=>{
         if(bullet.offsetTop<enemy.offsetTop+30 &&
            bullet.offsetTop+15>enemy.offsetTop &&
@@ -183,12 +180,9 @@ function startShooting(){
 /* ================== 피하기 게임 ================== */
 function startDodge(){
   clearGame();
-  
   let player=document.createElement("div");
   player.className="player";
   gameArea.appendChild(player);
-
-  // 중앙 하단 초기 위치
   player.style.left=(gameArea.offsetWidth/2 - 20)+"px";
   player.style.top=(gameArea.offsetHeight - 50)+"px";
 
@@ -245,6 +239,72 @@ function startClick(){
     gameArea.appendChild(target);
     setTimeout(()=>target.remove(),1500);
   },1000);
+}
+
+/* ================== 빠르게 누르기 게임 ================== */
+function startFastTap(){
+  clearGame();
+  let scoreTap=0;
+  scoreDisplay.innerText="점수: 0";
+
+  enemyInterval=setInterval(()=>{
+    let target=document.createElement("div");
+    target.className="target";
+    target.style.left=Math.random()*(gameArea.offsetWidth-30)+"px";
+    target.style.top=Math.random()*(gameArea.offsetHeight-30)+"px";
+
+    target.onclick=()=>{
+      scoreTap++;
+      scoreDisplay.innerText="점수: "+scoreTap;
+    }
+
+    gameArea.appendChild(target);
+    setTimeout(()=>target.remove(),1000);
+  },700);
+}
+
+/* ================== 속도 피하기 게임 ================== */
+function startSpeedDodge(){
+  clearGame();
+  let player=document.createElement("div");
+  player.className="player";
+  gameArea.appendChild(player);
+  player.style.left=(gameArea.offsetWidth/2 - 20)+"px";
+  player.style.top=(gameArea.offsetHeight - 50)+"px";
+
+  document.onmousemove = e=>{
+    let rect=gameArea.getBoundingClientRect();
+    let x=e.clientX - rect.left - 20;
+    if(x<0)x=0;
+    if(x>gameArea.offsetWidth-40)x=gameArea.offsetWidth-40;
+    player.style.left=x+"px";
+  }
+
+  let speed=5;
+  enemyInterval=setInterval(()=>{
+    let enemy=document.createElement("div");
+    enemy.className="enemy";
+    enemy.style.left=Math.random()*(gameArea.offsetWidth-30)+"px";
+    enemy.style.top="0px";
+    gameArea.appendChild(enemy);
+
+    let fall=setInterval(()=>{
+      enemy.style.top=(enemy.offsetTop+speed)+"px";
+
+      if(enemy.offsetTop+30>player.offsetTop &&
+         enemy.offsetLeft<player.offsetLeft+40 &&
+         enemy.offsetLeft+30>player.offsetLeft){
+        alert("💥 게임오버!");
+        location.reload();
+      }
+
+      if(enemy.offsetTop>gameArea.offsetHeight){
+        enemy.remove();
+        clearInterval(fall);
+        speed += 0.5; // 점점 빨라짐
+      }
+    },30);
+  },800);
 }
 </script>
 </body>
